--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -1,229 +1,215 @@
 {%comment%}Size Block{%endcomment%}
 
 <div class="page-width rich-text size-block">
-  <div class="grid">
-    <div class="grid__item">
-        <div class="rich-text__heading text-center">
-          <div class="heading">Size Chart</div>
-        </div>
+    <div class="grid">
+      <div class="grid__item">
+          <div class="rich-text__heading text-center">
+            <div class="heading">Size Chart</div>
+          </div>
+      </div>
     </div>
-  </div>
-  <div class="grid">
-    <div class="grid__item large-up--one-third medium-down--one-whole">
-        <div class="grid__item one-third">
-          <div class="one-whole" style="padding: 35px 0;">
-            <div class="size-label s">
-              <span class="s">S</span>
+    <div class="grid">
+      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+        <div class="size one-whole">
+          <div class="size-label">S</div>
+        </div>
+        <div class="one-whole">
+          <div class="puzzle-size">≈A5</div>
+                <img loading="lazy" src="{{ 's-size.jpg' | asset_img_url: 'x200' }}">
+              </div>
+              <div class="one-whole">
+              <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+              <div class="pp-label">Working hours</div>
+              <div class="sm-text">From 2 hours</div>
+              <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+              <div class="pp-label">Puzzle pieces</div>
+              <div class="puzzle-pieces">97-110</div>
+              <span style='font-size:20px;'>&#128527;</span>
             </div>
+      </div>
+      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+          <div class="size one-whole">
+            <div class="size-label">M</div>
+            <div class="bigger-text">2x bigger</div>
           </div>
           <div class="one-whole">
-      <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
-            <div class="pp-label">Puzzle pieces</div>
-            <div class="puzzle-pieces">97-110</div>
+            <div class="puzzle-size">≈A4</div>
+            <img loading="lazy" src="{{ 'm-size.jpg' | asset_img_url: 'x200' }}">
           </div>
           <div class="one-whole">
-      <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
-            <div class="pp-label">Working hours</div>
-            <div class="sm-text">From 2 hours</div>
-          </div>
-          <div class=" one-whole" style="margin-top: 20px;" style="pb-10">
-            <span class="price-label">$ 29.95</span>
-          </div>
+          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <div class="pp-label">Working hours</div>
+          <div class="sm-text">From 4 hours</div>
+          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <div class="pp-label">Puzzle pieces</div>
+          <div class="puzzle-pieces">172-216</div>
+          <span style='font-size:20px;'>&#128522;</span>
         </div>
-        <div class="grid__item one-third image-conteiner">
-      <img loading="lazy" src="{{ 'owl-size-l.jpg' | asset_url }}" height="110px">
-            <img loading="lazy" src="{{ 'staple-icon.png' | asset_url }}" height="110px">
+      </div>
+      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+        <div class="size one-whole">
+          <div class="size-label">King Size</div>
+          <div class="bigger-text">4x bigger</div>
         </div>
-        <div class="grid__item one-third size-conteiner">
-          <div><span class="size-lit-s">S</span><img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}"></div>
-          <div class="puzzle-pieces">≈A5</div>
-          <div class="pp-label">Format size</div>
-          <div class="sm-text">≈ 9,8"*4,7"</div>
+        <div class="one-whole">
+          <div class="puzzle-size">≈A3</div>
+          <img loading="lazy" src="{{ 'l-size.jpg' | asset_img_url: 'x200' }}">
         </div>
-    </div>
-    <div class="grid__item hl"><hr></div>
-    <div class="grid__item large-up--one-third medium-down--one-whole">
-        <div class="grid__item one-third">
-          <div class="vl"></div>
-          <div class="grid__item one-whole" style="padding: 25px 0;">
-            <div class="size-label m">
-              <span class="m">M</span>
-            </div>
-          </div>
-          <div class="grid__item one-whole">
-      <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
-            <div class="pp-label">Puzzle pieces</div>
-            <div class="puzzle-pieces">172-216</div>
-          </div>
-          <div class="grid__item one-whole">
-      <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}" style="pb-10">
-            <div class="pp-label">Working hours</div>
-            <div class="sm-text">From 4 hours</div>
-          </div>
-          <div class="grid__item one-whole" style="margin-top: 20px;">
-            <span class="price-label">$ 49.95</span>
-          </div>
+          <div class="one-whole">
+          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <div class="pp-label">Working hours</div>
+          <div class="sm-text">From 6 hours</div>
+          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <div class="pp-label">Puzzle pieces</div>
+          <div class="puzzle-pieces">298-366</div>
+          <span style='font-size:20px;'>&#128523;</span>
         </div>
-        <div class="grid__item one-third image-conteiner">
-      <img loading="lazy" src="{{ 'owl-size-l.jpg' | asset_url }}" height="150px">
-            <img loading="lazy" src="{{ 'staple-icon.png' | asset_url }}" height="150px">
+      </div>
+      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+        <div class="size one-whole">
+          <div class="size-label">Royal Set</div>
+          <div class="bigger-text">8x bigger</div>
         </div>
-        <div class="grid__item one-third size-conteiner">
-         <div style="display: flex;">
-           <span class="size-lit-s">S</span>
-           <img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}">
-           <img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}">
-          </div>
-          <div class="puzzle-pieces">≈ 2*A5</div>
-          <div class="pp-label">Format size</div>
-          <div class="sm-text">≈ 13"*9,8"</div>
+        <div class="one-whole">
+          <div class="puzzle-size">≈A2</div>
+          <img loading="lazy" src="{{ 'xl-size.jpg' | asset_img_url: 'x200' }}">
         </div>
-    </div>
-    <div class="grid__item hl"><hr></div>
-    <div class="grid__item large-up--one-third medium-down--one-whole">
-        <div class="grid__item one-third">
-          <div class="vl"></div>
-          <div class="grid__item one-whole" style="padding: 10px 0;">
-            <div class="size-label l">
-              <span class="l">KING size</span>
-            </div>
-          </div>
-          <div class="grid__item one-whole">
-      <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
-            <div class="pp-label">Puzzle pieces</div>
-            <div class="puzzle-pieces">298-332</div>
-          </div>
-          <div class="grid__item one-whole">
-      <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}" style="pb-10">
-            <div class="pp-label">Working hours</div>
-            <div class="sm-text">From 6 hours</div>
-          </div>
-          <div class="grid__item one-whole" style="margin-top: 20px;">
-            <span class="price-label">$ 69.95</span>
-          </div>
+          <div class="one-whole">
+          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <div class="pp-label">Working hours</div>
+          <div class="sm-text">From 10 hours</div>
+          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <div class="pp-label">Puzzle pieces</div>
+          <div class="puzzle-pieces">688-707</div>
+          <span style='font-size:20px;'>&#128526;</span>
         </div>
-        <div class="grid__item one-third image-conteiner">
-      <img loading="lazy" src="{{ 'owl-size-l.jpg'  | asset_url}}" height="190px">
-            <img loading="lazy" src="{{ 'staple-icon.png' | asset_url }}">
+      </div>
+      <div class="grid__item large-up--one-fifth medium-down--one-whole">
+        <div class="size one-whole">
+          <div class="size-label">Grand Royal Set</div>
+          <div class="bigger-text">16x bigger</div>
         </div>
-        <div class="grid__item one-third size-conteiner">
-         <div style="display: flex;">
-           <span class="size-lit-s">S</span>
-           <img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}">
-           <img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}">
-          </div>
-          <div style="display: flex;">
-           <img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}">
-           <img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}">
-          </div>
-          <div class="puzzle-pieces">≈ 4*A5</div>
-          <div class="pp-label">Format size</div>
-          <div class="sm-text">≈ 15,7"*11,8"</div>
+        <div class="one-whole">
+          <div class="puzzle-size">≈A1</div>
+          <img loading="lazy" src="{{ 'xxl-size.jpg' | asset_img_url: 'x200' }}">
         </div>
+          <div class=" one-whole">
+          <img loading="lazy" src="{{ 'timer-icon.png' | asset_url }}">
+          <div class="pp-label">Working hours</div>
+          <div class="sm-text">From 3 days</div>
+          <img loading="lazy" src="{{ 'pazl-icon.png' | asset_url }}" style="pb-10">
+          <div class="pp-label">Puzzle pieces</div>
+          <div class="puzzle-pieces">1444-1570</div>
+          <span style='font-size:20px;'>&#128525;</span>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
-
-<style>
-  .size-block .grid__item {
-    padding: 0;
+  
+  
+  <style>
+    .size.one-whole {
+      background: #ff862d;
+      line-height: 15px;
+      font-size: 14px;
+      border-radius: 30px;
+      display: flex;
+      width: fit-content;
+      margin: 0 auto;
   }
-  .size-block .heading {
-    margin: 30px 0;
+    .bigger-text {
+      padding: 5px 15px;;
+      border-radius: 30px;
+      color: #ffff;
+      width: min-content;
+      text-transform: uppercase;
   }
-  .size-label {
-    background-color: black;
-    border-radius: 50%;
-    color: white;
-    margin: 0 auto;
+  .puzzle-size {
+      padding-top: 15px;
   }
-  .size-label span {
-    display: table-cell;
-    vertical-align: middle;
-  }
-  .s {
-    height: 30px;
-    width: 30px;
-  }
-  .m {
-    height: 50px;
-    width: 50px;
-  }
-  .m span {
-    font-size: 20px;
-  }
-  .l {
-    height: 80px;
-    width: 80px;
-    line-height: 1em;
-  }
-  .l span {
-    font-size: 20px;
-  }
-  .price-label {
-    background:  no-repeat url("{{ 'price-label-icon.png' | asset_url }}");
-    padding: 8px 20px;
-    color: white;
-    font-size: 16px;
-  }
-  .image-conteiner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-  }
-  .size-block .grid__item  .size-conteiner {
-    padding: 0 10px;
-    height: 300px;
-    padding-top: 15%;
-  }
-  .puzzle-pieces {
-    font-family: Poppins;
-    font-size: 20px;
-  }
-  .sm-text {
-    font-size: 14px;
-    font-family: Poppins;
-    letter-spacing: 0;
-  }
-  .pp-label {
-    color: #ababab;
-    font-size: 12px;
-    font-family: Poppins;
-    font-weight: 400;
-    letter-spacing: 0;
-  }
-  .vl {
-    border-left: 1px solid black;
-    height: 300px;
-    position: absolute;
-  }
-  .hl {
-    display: none;
-  }
-  .size-lit-s {
-    position: absolute;
-    margin: 15px;
-    color: #ababab;
-    font-weight: bold;
-  }
-  .pb-10 {
-    padding-bottom: 10px;
-  }
-  @media only screen and (max-width: 990px) {
-    .size-block .grid {
-      margin-left: 0;
+    .size-block .grid__item {
+      padding: 0;
     }
-    .vl {
-      display: none;
+    .size-block .heading {
+      margin: 30px 0;
     }
-    .hl {
-    display: block;
-  }
-    .hl hr {
-      width: 100%;
-    border-bottom: 1px solid black;
+    .size-label {
+      background-color: black;
+      color: white;
+      margin: 0 auto;
+      padding: 12px 15px;
+      border-radius: 30px;
+      flex: auto;
+  
     }
-  }
-</style>
+    .size-label div {
+      display: table-cell;
+      vertical-align: middle;
+    }
+    .s {
+      height: 30px;
+      width: 30px;
+    }
+    .m {
+      height: 50px;
+      width: 50px;
+    }
+    .m div {
+      font-size: 20px;
+    }
+    .l {
+      height: 80px;
+      width: 80px;
+      line-height: 1em;
+    }
+    .l div {
+      font-size: 20px;
+    }
+    .price-label {
+      background:  no-repeat url("{{ 'price-label-icon.png' | asset_url }}");
+      padding: 8px 20px;
+      color: white;
+      font-size: 16px;
+    }
+    .image-conteiner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 300px;
+    }
+    .size-block .grid__item  .size-conteiner {
+      padding: 0 10px;
+      height: 300px;
+      padding-top: 15%;
+    }
+    .puzzle-pieces {
+      font-family: Poppins;
+      font-size: 20px;
+    }
+    .sm-text {
+      font-size: 14px;
+      font-family: Poppins;
+      letter-spacing: 0;
+    }
+    .pp-label {
+      color: #ababab;
+      font-size: 12px;
+      font-family: Poppins;
+      font-weight: 400;
+      letter-spacing: 0;
+    }
+    .size-lit-s {
+      position: absolute;
+      margin: 15px;
+      color: #ababab;
+      font-weight: bold;
+    }
+    .pb-10 {
+      padding-bottom: 10px;
+    }
+    @media only screen and (max-width: 990px) {
+      .size-block .grid {
+        margin-left: 0;
+      }
+    }
+  </style>
