--- a/assets/custom.scss.liquid
+++ b/assets/custom.scss.liquid
@@ -1,10 +1,8 @@
 .sw-size{
   .swatch_container{
-    display: flex;
-    justify-content: space-between;
+
     .swatch-element{
-      flex-basis: 32%;
-      margin-right: 0 !important;
+      height: 250px;width: 160px;
 
       input:checked+label{
         background-color: transparent;
@@ -169,9 +167,6 @@ footer.cart__footer .continue__shopping.cta_btns a {
     a {
       //color: #e1160e;
     }
-  }
-  .seo-button.btn_hero {
-    text-align: center;
   }
   p {
     text-align: left;
@@ -581,7 +576,6 @@ input.btn.add_toCart {
         flex-basis: 100%;
         label{
           width: 100%;
-          display: flex !important;
           align-items: center;
         }
         .sw_badge {
@@ -835,3 +829,4 @@ input.btn.add_toCart {
   .product__label--for-any-size {background-color: #d6d6d4}
   .product__label--sale {background-color: rgba(0, 0, 0, 1); color: white}
   .product__label--most-popular {background-color: #ff862d; color: white;}
+
