UN-547 Скоректировать пропорции между размерами

--- a/assets/custom.scss.liquid
+++ b/assets/custom.scss.liquid
@@ -574,6 +574,7 @@ input.btn.add_toCart {
       flex-wrap: wrap;
       .swatch-element{
         flex-basis: 100%;
+        outline: none;
         label{
           width: 100%;
           align-items: center;
