--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -86,23 +86,30 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
         </div>
       {%- endif -%}
         <div class="sw_image_outer">
-          <span class="sw_image"><img loading="lazy" src="{{variant.image | img_url: 'master' }}"/></span>
           {% case size_count%}
+          {% when 1%}
+          <span class="sw_image"><img loading="lazy" src="{{variant.image | img_url: 'master' }}" style="transform: scale(0.6);"/></span>
           {% when 2 %}
+          <span class="sw_image"><img loading="lazy" src="{{variant.image | img_url: 'master' }}" style="transform: scale(0.6);"/></span>
           <span class="sw_badge">2x bigger</span>
           {% when 3 %}
+          <span class="sw_image"><img loading="lazy" src="{{variant.image | img_url: 'master' }}" style="transform: scale(0.6);"/></span>
           <span class="sw_badge">3x bigger</span>
           {% when 4 %}
-          <span class="sw_badge">4x bigger</span>
+          <span class="sw_image"><img loading="lazy" src="{{variant.image | img_url: 'master' }}" style="transform: scale(0.8);"/></span>
+          <span class="sw_badge">7x bigger</span>
           {% when 5 %}
-          <span class="sw_badge">5x bigger</span>
+          <span class="sw_image"><img loading="lazy" src="{{variant.image | img_url: 'master' }}"/></span>
+          <span class="sw_badge">15x bigger</span>
           {% endcase %}
         </div>
         <div class="sw_content_outer">
           <div class="sw_var_price">
+            {%comment%}
             {% if variant.compare_at_price > variant.price %}
             <span class="sw_com_price">{{variant.compare_at_price | money }}</span>
-            {% endif %}
+            {% endif %} {%endcomment%}
+            <style>.sw-size .swatch_container .swatch-element .sw_var_price .sw_m_price {font-size: 18px;}</style>
             <span class="sw_m_price">{{variant.price | money }}</span>
           </div>
           <span class="sw_val">{{ value }}</span>
@@ -154,6 +161,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
     order: 2;
   }
   .sw-size .swatch_container .swatch-element .sw_image_outer{padding-bottom: 30px;padding-top: 10px;}
+  .swatch .swatch-element {margin: 0;}
 </style>
 <script>
   $('.swatch_container').slick({
