UN-562 Открыть trustpilot на постоянку

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -669,7 +669,7 @@
 
           {% endif %}
         </div>
-
+        <div class="reputon-trustpilot-reviews-widget" id="a83b7e60-bc57-11eb-a355-a9194acb8438" style="display: flex; justify-content: center;"></div>
         {% render 'pdp__discount' %}
         
         <div class="medium-up--hide storyblock-mob">{%- render 'fw-storyblock', channel: current_channel -%}</div>
