--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -7,8 +7,6 @@
 {% section 'releted_upsell_popup' %}
 {% section 'related-product' %}
 
-
-
 <script>
   // Override default values of shop.strings for each template.
   // Alternate product templates can change values of
@@ -30,7 +28,7 @@
  <div id="shopify-ali-review" product-id="{{ product.id }}"> {% comment %}ly_code_replace_for_[ shop.metafields.review_collector.review_code ]_begin{% endcomment %}{% assign language = cart.attributes["language"] %}{% if language == nil %}{% assign language = shop.metafields["languages"]["default"] %}{% endif %}{% assign ns = language | append: 'review_collector' %}{% assign key = 'review_code' %}{% if shop.metafields[ns][key] %}{% assign ly_translation = shop.metafields[ns][key] %}{% else %}{% assign ly_translation =  shop.metafields.review_collector.review_code  %}{% endif %}{{ ly_translation }}{% comment %}ly_code_replace_end{% endcomment %} </div>
 
 {% section 'alireviews-widget-11374' %}
-
+<div class="reputon-trustpilot-reviews-widget" id="78c456a0-bc54-11eb-910a-479bd9607d41" ></div>
 <style>
   .social-sharing{text-align:center;}
 </style>
