UN-549  Добавить новые каналы / fw

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -271,6 +271,8 @@
           {%- assign current_channel = 'fox_com' -%}
         {% when 'Mysterious Lion' %}
           {%- assign current_channel = 'lion_com' -%}
+        {% when 'Milky Whales 2 in 1' %}
+          {%- assign current_channel = 'mlechnye_kity_milky_whales' -%}
         {% else %}
           {%- assign current_channel = 'unidragon_world' -%}
         {% endcase %}
