--- a/sections/alireviews-widget-11374.liquid
+++ b/sections/alireviews-widget-11374.liquid
@@ -18,7 +18,7 @@
             <div class="reviews"></div>
         </div>
 
-        <iframe class="aliReviewsFrame" widget-id="11374" title="AliReviews" src="{{ shop.metafields.alireviews.iframe_domain }}/widget/review-widget?shop_id=29113221168&widget_id=11374&type_page={{ template }}&product_id={{ product.id }}&isAdminLogin={{ isAdmin }}&star=all&customer_id={{ customer.id }}&product_in_cart={%- for item in cart.items -%}{{ item.product_id }},{%- endfor -%}&num_rand=0&total_order_values={{customer.total_spent | divided_by:100}}&avg_order_value={{ avgOrderValue }}&tag={% for tag in customer.tags %}{{ tag }},{% endfor %}&country={% for address in customer.addresses %}{{ address.country_code }}{% endfor %}&last_purchase={{ customer.last_order.created_at | date: "%Y-%m-%d %H:%M" }}" height="0" width="100%" frameborder="0" scrolling="no" margin="0" loading="lazy"></iframe>
+        <iframe id="aliReviewsFrame" class="aliReviewsFrame" widget-id="11374" title="AliReviews" src="{{ shop.metafields.alireviews.iframe_domain }}/widget/review-widget?shop_id=29113221168&widget_id=11374&type_page={{ template }}&product_id={{ product.id }}&isAdminLogin={{ isAdmin }}&star=all&customer_id={{ customer.id }}&product_in_cart={%- for item in cart.items -%}{{ item.product_id }},{%- endfor -%}&num_rand=0&total_order_values={{customer.total_spent | divided_by:100}}&avg_order_value={{ avgOrderValue }}&tag={% for tag in customer.tags %}{{ tag }},{% endfor %}&country={% for address in customer.addresses %}{{ address.country_code }}{% endfor %}&last_purchase={{ customer.last_order.created_at | date: "%Y-%m-%d %H:%M" }}" height="0" width="100%" frameborder="0" scrolling="no" margin="0" loading="lazy"></iframe>
     </div>
 </div>
 
