New cart template

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,14 +1,10 @@
 {% comment %}ly_global_begin{% endcomment %}{% include 'ly-global' %}{% comment %}ly_global_end{% endcomment %}
-{% include 'vncpc' %}{% comment %}
+{% comment %}
+{% include 'vncpc' %}
   The contents of the cart.liquid template can be found in /sections/cart-template.liquid
 {% endcomment %}
 
-
 {% section 'cart-template' %}
-
-
 <!-- cpa KV 08/02/21-->
 <img src="//trends.revcontent.com/conv.php?t=hRCYv7frSiQEa3vvi2MYIv2zHmbeHT5z%2Bgs5vPwR5CUF7EqcTh9I9WvOvPsGQovv" />
-
-
 <script src="https://cdn.pagefly.io/static/assets/pf-custom-shopify-cart.min.js" defer></script>
